--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="column small">
-        <img src="./resources/images/img-news-bite.png">
+        <img id="cookie" src="./resources/images/img-news-bite.png">
         <div class="news-bites">
           <h3>NEWS BITES</h3>
           <span class="bite">Cat Emoji Goes Viral</span>
@@ -99,7 +99,23 @@
           <span class="bite">Home Business Advertising Ideas</span>
           <span class="bite">Advertising Internet Online</span>
           <span class="bite">Illustration in Marketing Materials</span>
+          <span class="bite">Finally a Top Secret way You Can</span>
         </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="info">
+        <span class="title">MY Times</span>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div>
+      <div class="copyright">
+        © 2016, My Times (A Division of Codecademy bite)
+      </div>
       </div>
     </div>
   </body>
